# task-manager-rust-project

./: Cargo.toml  Project Documentation.md  Rust and rocket presentation.pptx  data.sqlite
src/: main.rs
