[package]
name = "basic-rocket-web-server"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
rusqlite = { version = "0.24.1", features = ["bundled"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4"


